--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@ footer{margin-top:20px;color:#d6e9ff;font-size:13px;text-align:center;grid-colum
 const API_ENDPOINT = 'https://maskawasub.com/api/data'; // replace with your endpoint
 const API_TOKEN = 'YOUR_TOKEN_HERE'; // replace with your token
 
-document.getElementById('portfolioBtn').addEventListener('click', ()=>{window.location.< a href="portfolio/index.html">
-  <button>My Portfolio</button> ;});
-
+document.getElementById('portfolioBtn').addEventListener('click', ()=>{window.location.<a href="portfolio/index.html">
+  <button class="btn">My Portfolio</button> </a> 
 document.getElementById('purchaseBtn').addEventListener('click', ()=>{
   const network=document.getElementById('network').value;
   const plan=document.getElementById('plan').value;
