--- a/index.html
+++ b/index.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BrightLearn — Portfolio & Buy Data</title>
-<style>
-:root{
-  --accent:#ffcc00;
-  --accent-dark:#ffd633;
-  --bg1:#06213a;
-  --bg2:#0b63b8;
-  --glass: rgba(255,255,255,0.06);
-  --muted:#cfe8ff;
-}
-*{box-sizing:border-box;margin:0;padding:0;font-family:Inter,system-ui,Segoe UI,Roboto,'Helvetica Neue',Arial;}
-body{min-height:100vh;background:linear-gradient(135deg,var(--bg1),var(--bg2));color:#fff;display:flex;justify-content:center;align-items:flex-start;padding:40px;}
-.container{display:grid;grid-template-columns:2fr 1fr;gap:28px;max-width:1100px;width:100%;}
-.panel{background:linear-gradient(180deg,rgba(255,255,255,0.03),rgba(255,255,255,0.02));border-radius:14px;padding:28px;box-shadow:0 8px 30px rgba(0,0,0,0.35);backdrop-filter:blur(6px);}
-header h1{font-size:2.5em;margin-bottom:10px;}
-header p{color:var(--muted);margin-bottom:20px;font-size:1.2em;}
-.projects{display:grid;gap:12px;margin-bottom:20px;}
-.card{background: rgba(0,0,0,0.18);padding:14px;border-radius:10px;border:1px solid rgba(255,255,255,0.03);}
-.card h3{font-size:16px;margin-bottom:6px;}
-.card p{color:#dbeeff;font-size:14px;line-height:1.4;}
-.resources ul{list-style:none;padding-left:0;}
-.resources li{padding:6px 0;color:var(--muted);font-size:14px;}
-.side{background:linear-gradient(180deg,rgba(255,255,255,0.04),rgba(255,255,255,0.02));padding:20px;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,0.35);border:1px solid rgba(255,255,255,0.04);}
-.side h2{margin-bottom:10px;}
-.form-row{display:flex;gap:8px;margin-bottom:12px;}
-.form-row input,.form-row select{flex:1;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background: rgba(0,0,0,0.14);color:#fff;font-size:14px;outline:none;}
-.form-row input::placeholder{color:rgba(255,255,255,0.5);}
-.btn{display:inline-block;background:var(--accent);color:#001f3f;padding:10px 18px;border-radius:10px;border:none;font-weight:700;cursor:pointer;transition:all .18s ease;font-size:14px;}
-.btn:hover{background:var(--accent-dark);transform:translateY(-2px);}
-.btn.secondary{background:transparent;color:var(--accent);border:1px solid rgba(255,255,255,0.06);}
-.status{margin-top:12px;padding:12px;border-radius:8px;background:rgba(0,0,0,0.18);color:#fff;font-size:14px;min-height:50px;display:flex;align-items:center;gap:10px;}
-.status.success{border-left:4px solid #2ecc71;background: rgba(46,204,113,0.07);color:#eafff0;}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BrightLearn</title>
+  <style>
+    body {
+      font-family: Inter, sans-serif;
+      background: linear-gradient(135deg, #06213a, #0b63b8);
+      color: #fff;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 16px;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #cfe8ff;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    .btn {
+      background: #ffcc00;
+      color: #001f3f;
+      border: none;
+      padding: 14px 28px;
+      margin: 10px;
+      border-radius: 10px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .btn:hover {
+      background: #ffd633;
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Welcome to BrightLearn!</h1>
+  <p>Explore my portfolio or buy data instantly.</p>
+
+  <!-- Buttons -->
+  <button class="btn" onclick="window.location.href='portfolio.html'">My Portfolio</button>
+  <button class="btn" onclick="window.location.href='buydata.html'">Buy Data</button>
+
+  <footer style="margin-top:40px; font-size:0.85rem; color:#cfe8ff;">
+    © 2025 BrightLearn — Ismail Abdullahi Idris
+  </footer>
+
+</body>
+</html>.status.success{border-left:4px solid #2ecc71;background: rgba(46,204,113,0.07);color:#eafff0;}
 .status.error{border-left:4px solid #ff4d4d;background: rgba(255,77,77,0.06);color:#ffdede;}
 .status.info{border-left:4px solid #ffd633;color:var(--muted);background: rgba(255,214,102,0.03);}
 footer{margin-top:20px;color:#d6e9ff;font-size:13px;text-align:center;grid-column:1/-1;}
