--- a/index.html
+++ b/index.html
@@ -51,17 +51,8 @@
   <!-- Buttons -->
   <button class="btn" onclick="window.location.href='portfolio.html'">My Portfolio</button>
   <button class="btn" onclick="window.location.href='buydata.html'">Buy Data</button>
-
-  <footer style="margin-top:40px; font-size:0.85rem; color:#cfe8ff;">
-    © 2025 BrightLearn — Ismail Abdullahi Idris
-  </footer>
-
 </body>
-</html>.status.success{border-left:4px solid #2ecc71;background: rgba(46,204,113,0.07);color:#eafff0;}
-.status.error{border-left:4px solid #ff4d4d;background: rgba(255,77,77,0.06);color:#ffdede;}
-.status.info{border-left:4px solid #ffd633;color:var(--muted);background: rgba(255,214,102,0.03);}
-footer{margin-top:20px;color:#d6e9ff;font-size:13px;text-align:center;grid-column:1/-1;}
-@media(max-width:980px){.container{grid-template-columns:1fr;}body{padding:20px;}}
+</html>
 </style>
 </head>
 <body>
@@ -126,6 +117,5 @@ document.getElementById('purchaseBtn').addEventListener('click', ()=>{
   .catch(err=>{statusBox.textContent='⚠️ Network error: '+err.message;statusBox.className='status error';});
 });
 </script>
-<button onclick="window.location.href='portfolio.html'">My Portfolio</button>
 </body>
 </html>
