--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <!-- Buttons -->
   <button class="btn" onclick="window.location.href='portfolio.html'">My Portfolio</button>
-  <button class="btn" onclick="window.location.href='buydata.html'">Buy Data</button>
+ <button class="btn" onclick="window.location.href='buy-data/buy.html'">Buy Data</button>
 </body>
 </html>
 </style>
