--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <!-- Buttons -->
   <button class="btn" onclick="window.location.href='portfolio.html'">My Portfolio</button>
  <button class="btn" onclick="window.location.href='buy-data/buy.html'">Buy Data</button>
+  <a href="buy-data/buy.html" class="btn">Buy Data</a>
 </body>
 </html>
 </style>
