--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BrightLearn</title>
-  <style>
-    body {
-      font-family: Inter, sans-serif;
-      background: linear-gradient(135deg, #06213a, #0b63b8);
-      color: #fff;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 40px 16px;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 1.2rem;
-      color: #cfe8ff;
-      margin-bottom: 30px;
-      text-align: center;
-    }
-    .btn {
-      background: #ffcc00;
-      color: #001f3f;
-      border: none;
-      padding: 14px 28px;
-      margin: 10px;
-      border-radius: 10px;
-      font-weight: 700;
-      cursor: pointer;
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BrightLearn</title>
+<style>
+  /* Basic Reset & Font */
+  * { margin:0; padding:0; box-sizing:border-box; font-family: Arial, sans-serif; }
+  body { background: #0a0f2c; color:#fff; display:flex; flex-direction:column; min-height:100vh; }
+
+  /* Header */
+  header { padding: 20px; text-align:center; background: #001f3f; font-size: 1.8em; font-weight:bold; }
+
+  /* Middle Buttons */
+  .main-buttons { display:flex; justify-content:center; gap:20px; margin:40px 0; }
+  .btn { background:#ffcc00; color:#001f3f; padding:14px 28px; border:none; border-radius:8px; cursor:pointer; font-weight:bold; text-decoration:none; transition: all 0.3s ease; }
+  .btn:hover { background:#ffd633; transform: scale(1.05); }
+
+  /* Footer Buttons */
+  .footer-buttons { display:flex; justify-content:center; gap:20px; margin-bottom:10px; }
+  .footer-btn { background:transparent; color:#ffcc00; padding:10px 20px; border:1px solid #ffcc00; border-radius:6px; cursor:pointer; text-decoration:none; transition:all 0.3s ease; }
+  .footer-btn:hover { background:#ffcc00; color:#001f3f; }
+
+  /* Footer Text */
+  footer { text-align:center; margin-top:auto; padding:15px; background:#001f3f; font-size:0.9em; color:#ccc; }
+
+  /* Responsive */
+  @media(max-width:600px){
+    .main-buttons, .footer-buttons { flex-direction:column; gap:12px; }
+  }
+</style>
+</head>
+<body>
+
+<header>BrightLearn</header>
+
+<div class="main-buttons">
+  <a href="my-portfolio/index.html" class="btn">My Portfolio</a>
+  <a href="buy-data/buy.html" class="btn">Buy Data</a>
+</div>
+
+<div class="footer-buttons">
+  <a href="about-me/index.html" class="footer-btn">About Me</a>
+  <a href="contact-me/index.html" class="footer-btn">Contact Me</a>
+</div>
+
+<footer>© 2025 Ismail Abdullahi Idris</footer>
+
+</body>
+</html>      cursor: pointer;
       transition: all 0.3s ease;
     }
     .btn:hover {
