--- a/index.html
+++ b/index.html
@@ -1,82 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BrightLearn</title>
 <style>
-  /* Basic Reset & Font */
-  * { margin:0; padding:0; box-sizing:border-box; font-family: Arial, sans-serif; }
-  body { background: #0a0f2c; color:#fff; display:flex; flex-direction:column; min-height:100vh; }
-
-  /* Header */
-  header { padding: 20px; text-align:center; background: #001f3f; font-size: 1.8em; font-weight:bold; }
-
-  /* Middle Buttons */
-  .main-buttons { display:flex; justify-content:center; gap:20px; margin:40px 0; }
-  .btn { background:#ffcc00; color:#001f3f; padding:14px 28px; border:none; border-radius:8px; cursor:pointer; font-weight:bold; text-decoration:none; transition: all 0.3s ease; }
-  .btn:hover { background:#ffd633; transform: scale(1.05); }
-
-  /* Footer Buttons */
-  .footer-buttons { display:flex; justify-content:center; gap:20px; margin-bottom:10px; }
-  .footer-btn { background:transparent; color:#ffcc00; padding:10px 20px; border:1px solid #ffcc00; border-radius:6px; cursor:pointer; text-decoration:none; transition:all 0.3s ease; }
-  .footer-btn:hover { background:#ffcc00; color:#001f3f; }
-
-  /* Footer Text */
-  footer { text-align:center; margin-top:auto; padding:15px; background:#001f3f; font-size:0.9em; color:#ccc; }
-
-  /* Responsive */
-  @media(max-width:600px){
-    .main-buttons, .footer-buttons { flex-direction:column; gap:12px; }
+  body {
+    background: linear-gradient(135deg, #1f1f2e, #2c3e50, #34495e); /* dark but elegant */
+    color: #f0f4f8;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    text-align: center;
   }
-</style>
-</head>
-<body>
 
-<header>BrightLearn</header>
+  header {
+    padding: 30px 0;
+    font-size: 2em;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #ffdd57; /* soft gold, more visible */
+    text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+  }
 
-<div class="main-buttons">
-  <a href="my-portfolio/index.html" class="btn">My Portfolio</a>
-  <a href="buy-data/buy.html" class="btn">Buy Data</a>
-</div>
+  .btn {
+    display: inline-block;
+    padding: 16px 32px;
+    margin: 10px;
+    border-radius: 12px;
+    font-size: 1.2em;
+    font-weight: 700;
+    text-decoration: none;
+    color: #1a1a1a; /* dark text for gold button */
+    background-color: #ffd700; /* brighter gold */
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition: all 0.3s ease;
+  }
 
-<div class="footer-buttons">
-  <a href="about-me/index.html" class="footer-btn">About Me</a>
-  <a href="contact-me/index.html" class="footer-btn">Contact Me</a>
-</div>
+  .btn:hover {
+    background-color: #ffea75;
+    transform: scale(1.05);
+  }
 
-<footer>© 2025 Ismail Abdullahi Idris</footer>
+  footer {
+    padding: 20px 0;
+    background: rgba(0,0,0,0.3);
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
 
-</body>
-</html>      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-    .btn:hover {
-      background: #ffd633;
-      transform: scale(1.05);
-    }
-  </style>
-</head>
-<body>
-  <p>Explore my portfolio or buy data instantly.</p>
+  footer a {
+    text-decoration: none;
+    color: #ffd700;
+    font-weight: 600;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background: rgba(255,255,255,0.05);
+    transition: all 0.3s ease;
+  }
 
-  <!-- Buttons -->
-  <button class="btn" onclick="window.location.href='portfolio.html'">My Portfolio</button>
-  <a href="buy-data/buy.html" class="btn">Buy Data</a>
-</body>
-</html>
-</style>
-</head>
-<body>
-<div class="container">
-  <div class="panel">
-    <header>
+  footer a:hover {
+    background: rgba(255,255,255,0.15);
+    transform: scale(1.05);
+  }
 
-      <p>UI/UX • Video Editing • Graphics • Ebooks — Portfolio & Instant Digital Purchases</p>
-    </header>
-    <section class="projects">
-      <div class="card"><h3>Project 1 — UI Design Sample</h3><p>High-fidelity mobile UI for an education app — interaction-driven and accessible.</p></div>
-      <div class="card"><h3>Project 2 — Video Editing Showcase</h3><p>Short-form promotional video edits highlighting pacing and sound design.</p></div>
+  @media(max-width:600px){
+    .btn {width: 80%; font-size:1em;}
+    footer {flex-direction: column; gap: 10px;}
+  }
+</style>      <div class="card"><h3>Project 2 — Video Editing Showcase</h3><p>Short-form promotional video edits highlighting pacing and sound design.</p></div>
       <div class="card"><h3>Project 3 — E-book Design</h3><p>Layout and cover design for technical e-books, optimized for both print and PDF.</p></div>
       <h3>Resources</h3>
       <ul>
