--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
   <a href="contact.html">Contact Me</a>
   <div class="footer-text">© 2025 BrightLearn — Ismail Abdullahi Idris</div>
 </footer>
-
+<script>
+  const portfolioBtn = document.getElementById("portfolioBtn");
+  if (portfolioBtn) {
+    portfolioBtn.addEventListener("click", function() {
+      window.location.href = "portfolio/index.html";
+    });
+  }
+</script>
 </body>
 </html>
